# free-foil-refinement-types

./: .gitattributes  .gitignore  Makefile  README.md  build-debug.txt  cabal.project  generate.sh  gg.txt  hie.yaml  stack.yaml  test.py
.liquid/: out.smt2
free-foil-refinements/: README.md  free-foil-refinements.cabal
free-foil-refinements/grammar/: predicates.cf
free-foil-refinements/src/Language/Refinements/: Constraint.hs  Env.hs  Measure.hs  Predicates.hs  Run.hs  TypeSignature.hs
free-foil-refinements/src/Language/Refinements/Predicates/: Abs.hs  Doc.txt  ErrM.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Skel.hs  Test.hs
free-foil-sprite/: CHANGELOG.md  Setup.hs  free-foil-sprite.cabal  package.yaml
free-foil-sprite/app/: Main.hs
free-foil-sprite/grammar/Lambda/: Syntax.cf
free-foil-sprite/grammar/Sprite/: Front.cf  Inner.cf  Syntax.cf
free-foil-sprite/src/: Lib.hs
free-foil-sprite/src/Language/Lambda/: FreeFoilConfig.hs  Syntax.hs  TypeCheck.hs
free-foil-sprite/src/Language/Lambda/Syntax/: Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  Lex.hs  Lex.x  Lex.x.bak  Par.hs  Par.y  Par.y.bak  Print.hs  Print.hs.bak  Skel.hs  Skel.hs.bak  Test.hs  Test.hs.bak
free-foil-sprite/src/Language/Sprite/: FreeFoilConfig.hs  Syntax.hs  TypeCheck.hs
free-foil-sprite/src/Language/Sprite/Naive/: Check.hs  Constraints.hs  Predicates.hs  Run.hs  Substitution.hs
free-foil-sprite/src/Language/Sprite/Syntax/: Abs.hs  Convert.hs  Doc.txt  ErrM.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Skel.hs  Test.hs
free-foil-sprite/src/Language/Sprite/Syntax/Convert/: FrontToInner.hs  InnerToFTR.hs  QualifierToFTR.hs  QualifierToLR.hs
free-foil-sprite/src/Language/Sprite/Syntax/Front/: Abs.hs  Doc.txt  ErrM.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Skel.hs  Syntax.info  Test.hs
free-foil-sprite/src/Language/Sprite/Syntax/Inner/: Abs.hs  Doc.txt  ErrM.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Skel.hs  Test.hs
free-foil-sprite/src/Language/Sprite/TypeCheck/: Check.hs  Constraints.hs  Elaboration.hs  Interface.hs  Monad.hs  Predicates.hs  Run.hs  Temp.hs  Types.hs
free-foil-sprite/test/code/neg/: abs00.re  abs01.re  append00.re  choose00.re  choose01.re  cmp00.re  cmp01.re  cons00.re  foldn00.re  foldn01.re  id00.re  inc00.re  inc01.re  inc02.re  int01.re  nil00.re  olist02.re  single00.re  sum00.re  tuple00.re
free-foil-sprite/test/code/pos/: 1.re  abs00.re  abs01withHole.re  abs02.re  append00.re  assert00.re  cons00.re  const00.re  const01.re  fold_right00.re  foldn00.re  foldn01.re  id00.re  id01.re  inc00.re  inc01.re  inc02.re  int00.re  int01.re  nil00.re  olist00.re  olist01.re  olist02.re  rec00.re  single00.re  sum01.re  sum02.re  tuple00.re
