cabal-version: 3.0

name:           free-foil-refinements
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/AbsoluteNikola/free-foil-sprite#readme>
homepage:       https://github.com/AbsoluteNikola/free-foil-sprite#readme
bug-reports:    https://github.com/AbsoluteNikola/free-foil-sprite/issues
author:         Nikolay Rulev
maintainer:     nikolayr2001@gmail.com
copyright:      2024 Nikolay Rulev
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/AbsoluteNikola/free-foil-refienement-types

common extensions
    default-extensions:
      ImportQualifiedPost
      LambdaCase
      DerivingStrategies
      GeneralizedNewtypeDeriving
      OverloadedStrings
      RecordWildCards
      OverloadedRecordDot
      ViewPatterns
      TypeApplications
      ScopedTypeVariables
      GADTs
      DataKinds
      StandaloneDeriving
      FlexibleContexts
      DuplicateRecordFields
      TupleSections

library
  import: extensions
  exposed-modules:
    Language.Refinements.Constraint
    Language.Refinements.Predicates
    Language.Refinements.Predicates.Abs
    Language.Refinements.Predicates.Print
    Language.Refinements.Predicates.Par
    Language.Refinements.Predicates.Lex
    Language.Refinements.Measure
    Language.Refinements.Env
    Language.Refinements.TypeSignature
    Language.Refinements.Run
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-tool-depends:
      BNFC:bnfc >=2.9.4.1
    , alex:alex >=3.2.4
    , happy:happy >=1.19.9

  build-depends:
      array
    , base >=4.7 && <5
    , bifunctors
    , containers
    , unordered-containers
    , free-foil >=0.2.0
    , pretty-simple
    , transformers
    , mtl
    , text
    , liquid-fixpoint

  default-language: Haskell2010
