cabal-version: 3.0

name:           free-foil-sprite
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/AbsoluteNikola/free-foil-sprite#readme>
homepage:       https://github.com/AbsoluteNikola/free-foil-sprite#readme
bug-reports:    https://github.com/AbsoluteNikola/free-foil-sprite/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2024 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    CHANGELOG.md
    grammar/Sprite/Syntax.cf
    src/Language/Sprite/Syntax/Lex.x
    src/Language/Sprite/Syntax/Par.y

source-repository head
  type: git
  location: https://github.com/AbsoluteNikola/free-foil-sprite

common extensions
    default-extensions:
      ImportQualifiedPost
      LambdaCase
      DerivingStrategies
      GeneralizedNewtypeDeriving
      OverloadedStrings
      RecordWildCards
      OverloadedRecordDot

custom-setup
  setup-depends:
      Cabal >=2.4.0.1 && <4.0
    , PyF
    , base >=4.11.0.0 && <5.0
    , process >=1.6.3.0

library
  import: extensions
  exposed-modules:
      Language.Sprite.FreeFoilConfig
      Language.Sprite.Syntax
      Language.Sprite.Syntax.Abs
      Language.Sprite.Syntax.Lex
      Language.Sprite.Syntax.Par
      Language.Sprite.Syntax.Print
      Language.Sprite.TypeCheck

      Language.Sprite.Naive.Constraints
      Language.Sprite.Naive.Check
      Language.Sprite.Naive.Substitution
      Language.Sprite.Naive.Predicates
      Lib
  other-modules:
      Paths_free_foil_sprite
  autogen-modules:
      Paths_free_foil_sprite
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-tool-depends:
      BNFC:bnfc >=2.9.4.1
    , alex:alex >=3.2.4
    , happy:happy >=1.19.9

  build-depends:
      array
    , base >=4.7 && <5
    , bifunctors
    , containers
    , free-foil >=0.2.0
    , pretty-simple
    , transformers
    , mtl
    , text
    , liquid-fixpoint

  default-language: Haskell2010

executable free-foil-sprite-exe
  main-is: Main.hs
  other-modules:
      Paths_free_foil_sprite
  autogen-modules:
      Paths_free_foil_sprite
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      array
    , base >=4.7 && <5
    , bifunctors
    , containers
    , free-foil >=0.2.0
    , free-foil-sprite
    , pretty-simple
  default-language: Haskell2010

test-suite free-foil-sprite-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_free_foil_sprite
  autogen-modules:
      Paths_free_foil_sprite
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      array
    , base >=4.7 && <5
    , bifunctors
    , containers
    , free-foil >=0.2.0
    , free-foil-sprite
    , pretty-simple
  default-language: Haskell2010
