cabal-version: 3.0

name:           free-foil-sprite
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/AbsoluteNikola/free-foil-sprite#readme>
homepage:       https://github.com/AbsoluteNikola/free-foil-sprite#readme
bug-reports:    https://github.com/AbsoluteNikola/free-foil-sprite/issues
author:         Nikolay Rulev
maintainer:     nikolayr2001@gmail.com
copyright:      2024 Nikolay Rulev
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md
    
source-repository head
  type: git
  location: https://github.com/AbsoluteNikola/free-foil-sprite

common extensions
    default-extensions:
      ImportQualifiedPost
      LambdaCase
      DerivingStrategies
      GeneralizedNewtypeDeriving
      OverloadedStrings
      RecordWildCards
      OverloadedRecordDot
      ViewPatterns
      TypeApplications
      ScopedTypeVariables
      GADTs
      DataKinds
      StandaloneDeriving
      FlexibleContexts
      DuplicateRecordFields
      TupleSections

library
  import: extensions
  exposed-modules:
      Language.Sprite.FreeFoilConfig
      Language.Sprite.Syntax
      Language.Sprite.Syntax.Convert.FrontToInner
      Language.Sprite.Syntax.Convert.InnerToFTR
      Language.Sprite.Syntax.Front.Abs
      Language.Sprite.Syntax.Front.Lex
      Language.Sprite.Syntax.Front.Par
      Language.Sprite.Syntax.Front.Print
      Language.Sprite.Syntax.Inner.Abs
      Language.Sprite.Syntax.Inner.Lex
      Language.Sprite.Syntax.Inner.Par
      Language.Sprite.Syntax.Inner.Print
      Language.Sprite.TypeCheck.Check
      Language.Sprite.TypeCheck.Constraints
      Language.Sprite.TypeCheck.Monad
      Language.Sprite.TypeCheck.Predicates
      Language.Sprite.TypeCheck.Run
      Language.Sprite.TypeCheck.Types
      Lib
  other-modules:
      Paths_free_foil_sprite
  autogen-modules:
      Paths_free_foil_sprite
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-tool-depends:
      BNFC:bnfc >=2.9.4.1
    , alex:alex >=3.2.4
    , happy:happy >=1.19.9

  build-depends:
      array
    , base >=4.7 && <5
    , bifunctors
    , containers
    , free-foil >=0.2.0
    , pretty-simple
    , transformers
    , mtl
    , text
    , liquid-fixpoint
    , kind-generics
    , kind-generics-th

  default-language: Haskell2010

executable free-foil-sprite-exe
  main-is: Main.hs
  other-modules:
      Paths_free_foil_sprite
  autogen-modules:
      Paths_free_foil_sprite
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      array
    , base >=4.7 && <5
    , bifunctors
    , containers
    , free-foil >=0.2.0
    , free-foil-sprite
    , pretty-simple
  default-language: Haskell2010

test-suite free-foil-sprite-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_free_foil_sprite
  autogen-modules:
      Paths_free_foil_sprite
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      array
    , base >=4.7 && <5
    , bifunctors
    , containers
    , free-foil >=0.2.0
    , free-foil-sprite
    , pretty-simple
  default-language: Haskell2010
